// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should decrypt note content via password 1`] = `
{
  "content": "#+ID: qweqwe
#+TITLE: Hello worlld

* Hello?",
  "encrypted": "gpgPassword",
  "id": "id",
  "meta": {
    "description": "Awesome description",
    "images": [],
    "published": undefined,
    "title": "My note title",
  },
}
`;

exports[`Should decrypt note via provided keys 1`] = `
{
  "content": "#+ID: qweqwe
#+TITLE: Hello worlld

* Hello?",
  "encrypted": "gpgKeys",
  "id": "id",
  "meta": {
    "description": "Awesome description",
    "images": [],
    "published": undefined,
    "title": "My note title for decryption via keys",
  },
}
`;

exports[`Should encrypt note content via password 1`] = `
{
  "author": {
    "email": "test@mail.com",
    "id": "1",
    "name": "John Doe",
  },
  "encrypted": "gpgPassword",
  "id": "id",
  "meta": {
    "id": undefined,
    "published": false,
  },
}
`;

exports[`Should encrypt note via keys 1`] = `
{
  "author": {
    "email": "test@mail.com",
    "id": "1",
    "name": "John Doe",
  },
  "encrypted": "gpgKeys",
  "id": "id",
  "meta": {
    "id": undefined,
    "published": false,
  },
}
`;

exports[`Should not encrypt note with disabled encryption 1`] = `
{
  "author": {
    "email": "test@mail.com",
    "id": "1",
    "name": "John Doe",
  },
  "content": "#+ID: qweqwe
#+TITLE: Hello worlld

* Hello?",
  "encrypted": null,
  "id": "id",
  "meta": {
    "description": "Awesome description",
    "images": [],
    "published": false,
    "title": "My note title",
  },
}
`;

exports[`Should not encrypt public note 1`] = `
{
  "author": {
    "email": "test@mail.com",
    "id": "1",
    "name": "John Doe",
  },
  "content": "#+ID: qweqwe
#+TITLE: Hello worlld

* Hello?",
  "encrypted": "gpgPassword",
  "id": "id",
  "meta": {
    "description": "Awesome description",
    "images": [],
    "published": true,
    "title": "My note title",
  },
}
`;

exports[`Should not encrypt publick note 1`] = `
{
  "author": {
    "email": "test@mail.com",
    "id": "1",
    "name": "John Doe",
  },
  "content": "#+ID: qweqwe
#+TITLE: Hello worlld

* Hello?",
  "encrypted": "gpgPassword",
  "id": "id",
  "meta": {
    "description": "Awesome description",
    "images": [],
    "published": true,
    "title": "My note title",
  },
}
`;
